Fix for jumbotron background image scaling on mobile and socials icon wrapping in footer

--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body {
   background-color: #0d0d0d;
 }
 
-#navbar {
+.navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 50px;
-  background-color: #0d0d0d;
+  background-color: transparent;
   color: #ffffff;
   position: fixed; 
   top: 0;
@@ -29,6 +29,7 @@ body {
 .navbarScrolled {
   box-shadow: 0 20px 30px -2px rgba(0,0,0,.2);
   transition: box-shadow 1s;
+  background-color: #0d0d0d;
 }
 
 #navSocials, #burger {
@@ -38,7 +39,7 @@ body {
 .contactIcon {
   height: 25px;
   width: 25px;
-  padding: 15px;
+  padding: 5px;
   margin: auto;
 }
 
@@ -208,15 +209,15 @@ h3 {
 #section1_Jumbotron {
   flex-direction: column;
   height: 100vh;
-  background: #000000 url(/resources/images/Background_Mockups1.png);
-  background-position: center 25px;
+  background: #0d0d0d url(/resources/images/Background_Mockups1.png);
+  background-position: center top;;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   color: #ffffff;
   margin: 0;
   animation: fadeIn 0.5s both;
   animation-delay: 0.5s;
+  border-top: 50px;
 }
 
 #cursor {
@@ -232,7 +233,7 @@ h3 {
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 40vh;
+  margin-top: 35vh;
 }
 
 #latestContentContainer {
